* Tue Mar 2 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-12
- check_CVE-2018-1111: Check properly Pakiti results.

* Wed Feb 24 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-11
- check_CVE-2018-1111: Fix the test of exit status.

* Mon Feb 22 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-10
- pakiti-client: Fix Pakiti reporting using openssl and review processing results from Pakiti
- check_CVE-2018-1111: Check Pakiti results before checking for mitigations

* Sun Feb 14 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-9
- check_CVE-2021-3156: Check if mitigation for CVE-2021-3156 has been applied

* Wed Oct 24 2019 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-8
- check_pakiti_vuln: Only ask for recent machines from Pakiti [ggus #143718]

* Wed Oct 09 2019 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.0.0-7
- check_pakiti_vuln: fix typos
- CREAM: Retrieve also std.out and std.err for debugging purposes

* Fri Sep 27 2019 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-6
- check_pakiti_vuln: update query URL to Pakiti3 server

* Mon Sep 23 2019 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-5
- Update Pakiti servers

* Wed Mar 6 2019 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.0.0-4
- Fix bug in Permissions test
- Include CRL and dcache-perms in ARC tests

* Tue Feb 19 2019 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.0.0-3
- Add requirement for perl-Text-CSV in SPEC file.
- Create /var/spool/cream.

* Mon Feb 5 2019 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.0.0-2
- Fix CREAM probes packaging bug in SPEC file.
- Use Net::SSL in check_pakiti_vuln, otherwise authentication with Pakiti server fails.

* Tue Nov 27 2018 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.0.0-1
- New version, for use with ARGO and Centos 6 or 7.
  The security probes remain the same, but the submission to the sites
  is done using:
  * NorduGrid ARC Nagios Plugins
  * Modified CREAM-CE direct job submission metrics

* Mon Oct 29 2018 Daniel Kouril <kouril@ics.muni.cz> - 1.0.11-51