@@ -1,3 +1,6 @@
+* Wed Mar 3 2021 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.1.0-0
+- Added support for HTCondor-CE, using the jess grid job submission library.
+
 * Tue Mar 2 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-12
 - check_CVE-2018-1111: Check properly Pakiti results.
 
